Se agregan los cambios del codigo otros

--- a/formulario.html
+++ b/formulario.html
@@ -26,7 +26,8 @@
       <option value="vnzl">Venezolana</option>
     </select>
     <br />
-    <input type="submit">
+    <input type="submit" id="submit"> 
+    <!-- se agrega el id submit -->
   </form>
 
   <div>
@@ -34,7 +35,7 @@
 
   </div>
 
-  <script src="../formulario.js"></script>
+  <script src="./formulario.js"></script>
 </body>
 
 </html>
